--- a/templates/estadisticas.html
+++ b/templates/estadisticas.html
@@ -25,18 +25,18 @@
               {% endfor %}
             </div>
             <!-- Login Form -->
-            <form action="/add_event" method="POST" id="myForm">
+            <form action="" method="POST" id="myForm">
               <!--  <input type="text" id="login" class="fadeIn second" name="title" placeholder="Nombre del evento" /> -->
 
               <select id="tipoD">
                 <option value="" selected hidden>Seleccione un dato</option>
-                <option value="humedad">Humedad</option>
-                <option value="temp">Temperatura exterior</option>
-                <option value="dis">Distancia</option>
-                <option value="mov">Movimientos</option>
-                <option value="al">Alarmas</option>
-                <option value="tempI">Temperatura interior</option>
-                <option value="cpu">Uso de CPU</option>
+                <option value="_Humedad">Humedad</option>
+                <option value="_Temperatura">Temperatura exterior</option>
+                <option value="_Distancia">Distancia</option>
+                <option value="_Movimientos">Movimientos</option>
+                <option value="_Alarmas">Alarmas</option>
+                <option value="_TemperaturaCPU">Temperatura interior</option>
+                <option value="_UsoCPU">Uso de CPU</option>
               </select>
 
               <select id="periodo">
@@ -86,7 +86,12 @@
                   </div>
                 </div>
               </div>
-              <input type="submit" class="fadeIn fourth" value="Guardar" />
+              <input
+                type="button"
+                id="act"
+                class="fadeIn fourth"
+                value="Cargar"
+              />
             </form>
           </div>
         </div>
