--- a/templates/estadisticas.html
+++ b/templates/estadisticas.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %} {% block body %}
 
-<div>
+<div onload="primera()">
   <div class="row ">
     <div
       class="col  fadeIn  align-self-start first shadow ml-4 mt-3 rounded"
