--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -134,5 +134,5 @@
     myChart = new Chart(ctx, config);
     window.myLine = myChart;
   }
-  $("#act").on("click", updateStatistics);
+  //$("#act").on("click", updateStatistics);
 </script>
