--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -153,5 +153,5 @@
     window.myLine = chart;
   }
   $("#act").on("click", updateStatistics);
-  window.onload = primera;
+  $(document).ready(primera);
 </script>
