--- a/templates/estadisticas.html
+++ b/templates/estadisticas.html
@@ -33,18 +33,16 @@
                 <option value="_Humedad">Humedad</option>
                 <option value="_Temperatura">Temperatura exterior</option>
                 <option value="_Distancia">Distancia</option>
-                <option value="_Movimientos">Movimientos</option>
-                <option value="_Alarmas">Alarmas</option>
                 <option value="_TemperaturaCPU">Temperatura interior</option>
                 <option value="_UsoCPU">Uso de CPU</option>
               </select>
 
               <select id="periodo">
                 <option value="0" selected hidden>Intervalo de tiempo</option>
+                <option value="hoy">Hoy</option>
                 <option value="siempre">Desde siempre</option>
                 <option value="mes">Último mes</option>
                 <option value="semana">Última semana</option>
-                <option value="dia">Último día</option>
                 <option value="intervalo">Intervalo definido</option> </select
               ><br />
 
