--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -7,6 +7,7 @@
   var tipoDSelected;
   var periodo = document.getElementById("periodo");
   var periodoSelected;
+  periodoSelected.value = "hoy";
   var fin = document.getElementById("fin");
   fin.style.display = "none";
 
@@ -84,6 +85,7 @@
 
   function updateStatistics() {
     muestras = 50;
+    console.log(periodoSelected.value);
     fec = hoy();
 
     $.post("/updateStatistics", {
