--- a/templates/estadisticas.html
+++ b/templates/estadisticas.html
@@ -38,7 +38,7 @@
               </select>
 
               <select id="periodo">
-                <option value="0" selected hidden>Intervalo de tiempo</option>
+                <option value="hoy" selected hidden>Intervalo de tiempo</option>
                 <option value="hoy">Hoy</option>
                 <option value="siempre">Desde siempre</option>
                 <option value="mes">Último mes</option>
