--- a/templates/estadisticas.html
+++ b/templates/estadisticas.html
@@ -40,12 +40,13 @@
               <select id="periodo">
                 <option value="hoy" selected hidden>Intervalo de tiempo</option>
                 <option value="hoy">Hoy</option>
+                <option value="dia">Día concreto</option>
                 <option value="siempre">Desde siempre</option>
                 <option value="mes">Último mes</option>
                 <option value="semana">Última semana</option>
                 <option value="intervalo">Intervalo definido</option> </select
               ><br />
-
+              <div id="diaC"><input type="date" id="diaConcreto" /></div>
               <div id="peri">
                 <label for="input-1">
                   Inicio
