--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -104,7 +104,8 @@
   function actualiza(results) {
     chart.data.datasets[0].data = results.data;
     console.log(results.unidad);
-    chart.options.tooltips.callbacks.label = item => results.unidad;
+    chart.options.tooltips.callbacks.label = item =>
+      `${item.yLabel} ` + result.unidad;
     chart.update();
   }
 
