--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -105,7 +105,7 @@
     chart.data.datasets[0].data = results.data;
     console.log(results.unidad);
     chart.options.tooltips.callbacks.label = item =>
-      `${item.yLabel} ` + result.unidad;
+      `${item.yLabel} ` + results.unidad;
     chart.update();
   }
 
