--- a/templates/estadisticas.html
+++ b/templates/estadisticas.html
@@ -46,9 +46,17 @@
                 <option value="semana">Última semana</option>
                 <option value="intervalo">Intervalo definido</option> </select
               ><br />
-              <div id="diaC"><input type="date" id="diaConcreto" /></div>
+
+              <label for="diaConcreto">
+                Seleccione día a mostrar
+              </label>
+              <br />
+              <div id="diaC">
+                <input type="date" id="diaConcreto" />
+              </div>
+
               <div id="peri">
-                <label for="input-1">
+                <label for="login-1">
                   Inicio
                 </label>
                 <br />
@@ -62,7 +70,7 @@
                   />
                 </div>
 
-                <label for="input-2">
+                <label for="input-3">
                   Fin
                 </label>
                 <br />
