--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -182,7 +182,7 @@
               time: {
                 parser: timeFormat,
                 // round: 'day'
-                tooltipFormat: "ll HH:mm"
+                tooltipFormat: "HH:mm"
               },
               scaleLabel: {
                 display: true,
