--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -143,9 +143,10 @@
       .alpha(0.5)
       .rgbString();
     chart.data.datasets[0].borderColor = myColor;
-    chart.data.datasets[0].points.forEach(function(point) {
-      point.datasetLabel = "updated label";
-    });
+    chart.config.options.scales.xAxes[0].type = "time";
+    chart.config.options.scales.xAxes[0].time.parser = timeFormat;
+    chart.config.options.scales.xAxes[0].time.tooltipFormat = "HH:mm";
+
     chart.update();
   }
 
@@ -182,7 +183,7 @@
               time: {
                 parser: timeFormat,
                 // round: 'day'
-                tooltipFormat: "HH:mm"
+                tooltipFormat: "ll HH:mm"
               },
               scaleLabel: {
                 display: true,
