--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -146,7 +146,7 @@
     chart.update();
     chart.config.options.scales.xAxes[0].type = "time";
     chart.config.options.scales.xAxes[0].time.parser = timeFormat;
-    chart.config.options.scales.xAxes[0].time.tooltipFormat = "HH:mm";
+    chart.config.options.scales.xAxes[0].time.tooltipFormat = "ll HH:mm";
     chart.update();
   }
 
