--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -146,6 +146,7 @@
   function actualiza(results) {
     chart.data.datasets[0].data = results.data;
     chart.data.labels = dameFecha(results.labels);
+    console.log(dameFecha(results.labels));
     chart.options.tooltips.callbacks.label = item =>
       `${item.yLabel} ` + results.unidad;
     chart.data.datasets[0].label = results.legend;
@@ -158,7 +159,6 @@
   }
 
   function crea(results) {
-    console.log(results.labels);
     var config = {
       type: "line",
       data: {
