--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -55,7 +55,7 @@
     return dd + "-" + mm + "-" + yyyy;
   }
   var color = Chart.helpers.color;
-  var timeFormat = "HH:mm:ss";
+  var timeFormat = "HH:mm:ss DD-MM-YYYY";
   var myColor;
   function dameFecha(labels) {
     var fechas = [];
