--- a/templates/estadisticas.html
+++ b/templates/estadisticas.html
@@ -93,6 +93,15 @@
                   </div>
                 </div>
               </div>
+              <label for="muestras">Número de muestras:</label>
+
+              <input
+                type="number"
+                id="muestras"
+                name="muestras"
+                min="3"
+                value="50"
+              />
               <input
                 type="button"
                 id="act"
