--- a/templates/estadisticas.html
+++ b/templates/estadisticas.html
@@ -25,7 +25,7 @@
               {% endfor %}
             </div>
             <!-- Login Form -->
-            <form action="" method="POST" id="myForm">
+            <form action="#" id="myForm">
               <!--  <input type="text" id="login" class="fadeIn second" name="title" placeholder="Nombre del evento" /> -->
 
               <select id="tipoD">
@@ -100,6 +100,7 @@
                 id="muestras"
                 name="muestras"
                 min="3"
+                max="1000"
                 value="50"
               />
               <input
