--- a/templates/estadisticas.html
+++ b/templates/estadisticas.html
@@ -45,9 +45,7 @@
                 <option value="hoy" selected hidden>Intervalo de tiempo</option>
                 <option value="hoy">Hoy</option>
                 <option value="dia">Día concreto</option>
-                <option value="siempre">Desde siempre</option>
-                <option value="mes">Último mes</option>
-                <option value="semana">Última semana</option>
+                <option value="*">Desde siempre</option>
                 <option value="intervalo">Intervalo definido</option> </select
               ><br />
 
