--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -104,6 +104,7 @@
       fec = transforma(diaSelected.value);
     } else if (periodoSelected.value == "intervalo") {
       fec = fecha1.value + fecha2.value;
+      console.log(fec);
     } else {
       fec = periodoSelected.value;
     }
