--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -140,7 +140,7 @@
   }
 
   function actualiza(results) {
-    console.log(results.labels));
+    console.log(results.labels);
     chart.data.datasets[0].data = results.data;
 
     chart.data.labels = dameFecha(results.labels);
