--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -187,7 +187,7 @@
               type: "time",
               time: {
                 parser: timeFormat,
-                // round: 'day'
+                round: "day",
                 tooltipFormat: "ll HH:mm"
               },
               scaleLabel: {
